# AOC-TUI

./: README.md  pyproject.toml
src/aoc_tui/: cli.py
src/aoc_tui/core/: aoc_app.py  aoc_day.py  aoc_day_part.py  aoc_file_data.py  aoc_part_data.py  aoc_year.py
src/aoc_tui/core/templates/: day.txt
src/aoc_tui/tui/: app.py
src/aoc_tui/tui/components/: day_part_view.py  day_view.py  title.py
src/aoc_tui/tui/css/: app.tcss  component_tester.tcss  day_view.tcss  year_screen.tcss
src/aoc_tui/tui/screens/: component_tester.py  year_screen.py
